--- a/src/main/resources/assets/extraboats/lang/es_mx.json
+++ b/src/main/resources/assets/extraboats/lang/es_mx.json
@@ -1,7 +1,6 @@
 {
   "itemGroup.extraboats": "Extra Boats",
   
-
   "entity.extraboats.chest_boat": "Bote con cofre",
   "entity.extraboats.furnace_boat": "Bote con horno",
   "entity.extraboats.large_boat": "Bote grande",
@@ -96,18 +95,19 @@
   "item.extraboats.large_poise_boat": "Bote equilibrado grande",
   
   
-  "_comment": "Bloomful",
+  "_comment": "Environmental",
   
   "item.extraboats.wisteria_chest_boat": "Bote de glicina con cofre",
   "item.extraboats.wisteria_furnace_boat": "Bote de glicina con horno",
   "item.extraboats.large_wisteria_boat": "Bote de glicina grande",
+
+  "item.extraboats.env_willow_chest_boat": "Bote de sauce con cofre",
+  "item.extraboats.env_willow_furnace_boat": "Bote de sauce con horno",
+  "item.extraboats.large_env_willow_boat": "Bote de sauce grande",
   
-  
-  "_comment": "Swamp Expansion",
-  
-  "item.extraboats.se_willow_chest_boat": "Bote de sauce con cofre",
-  "item.extraboats.se_willow_furnace_boat": "Bote de sauce con horno",
-  "item.extraboats.large_se_willow_boat": "Bote de sauce grande",
+  "item.extraboats.env_cherry_chest_boat": "Bote de cerezo con cofre",
+  "item.extraboats.env_cherry_furnace_boat": "Bote de cerezo con horno",
+  "item.extraboats.large_env_cherry_boat": "Bote de cerezo grande",
   
   
   "_comment": "Atmospheric",
