Update es_ar.json, es_es.json, es_mx.json
Renamed rosewood from "palisandro" to "jacarandá" to match atmospheric translations

--- a/src/main/resources/assets/extraboats/lang/es_es.json
+++ b/src/main/resources/assets/extraboats/lang/es_es.json
@@ -112,19 +112,19 @@
   
   "_comment": "Atmospheric",
   
-  "item.extraboats.rosewood_chest_boat": "Barca de palisandro con cofre",
+  "item.extraboats.rosewood_chest_boat": "Barca de jacarandá con cofre",
   "item.extraboats.aspen_chest_boat": "Barca de álamo con cofre",
   "item.extraboats.kousa_chest_boat": "Barca de kousa con cofre",
   "item.extraboats.yucca_chest_boat": "Barca de yuca con cofre",
   "item.extraboats.grimwood_chest_boat": "Barca siniestra con cofre",
   
-  "item.extraboats.rosewood_furnace_boat": "Barca de palisandro con horno",
+  "item.extraboats.rosewood_furnace_boat": "Barca de jacarandá con horno",
   "item.extraboats.aspen_furnace_boat": "Barca de álamo con horno",
   "item.extraboats.kousa_furnace_boat": "Barca de kousa con horno",
   "item.extraboats.yucca_furnace_boat": "Barca de yuca con horno",
   "item.extraboats.grimwood_furnace_boat": "Barca siniestra con horno",
   
-  "item.extraboats.large_rosewood_boat": "Barca de palisandro grande",
+  "item.extraboats.large_rosewood_boat": "Barca de jacarandá grande",
   "item.extraboats.large_aspen_boat": "Barca de álamo grande",
   "item.extraboats.large_kousa_boat": "Barca de kousa grande",
   "item.extraboats.large_yucca_boat": "Barca de yuca grande",
