--- a/src/main/resources/assets/extraboats/lang/en_us.json
+++ b/src/main/resources/assets/extraboats/lang/en_us.json
@@ -113,18 +113,21 @@
   "_comment": "Atmospheric",
   
   "item.extraboats.rosewood_chest_boat": "Rosewood Boat with Chest",
+  "item.extraboats.morado_chest_boat": "Morado Boat with Chest",
   "item.extraboats.aspen_chest_boat": "Aspen Boat with Chest",
   "item.extraboats.kousa_chest_boat": "Kousa Boat with Chest",
   "item.extraboats.yucca_chest_boat": "Yucca Boat with Chest",
   "item.extraboats.grimwood_chest_boat": "Grimwood Boat with Chest",
   
   "item.extraboats.rosewood_furnace_boat": "Rosewood Boat with Furnace",
+  "item.extraboats.morado_furnace_boat": "Morado Boat with Furnace",
   "item.extraboats.aspen_furnace_boat": "Aspen Boat with Furnace",
   "item.extraboats.kousa_furnace_boat": "Kousa Boat with Furnace",
   "item.extraboats.yucca_furnace_boat": "Yucca Boat with Furnace",
   "item.extraboats.grimwood_furnace_boat": "Grimwood Boat with Furnace",
   
   "item.extraboats.large_rosewood_boat": "Large Rosewood Boat",
+  "item.extraboats.large_morado_boat": "Large Morado Boat",
   "item.extraboats.large_aspen_boat": "Large Aspen Boat",
   "item.extraboats.large_kousa_boat": "Large Kousa Boat",
   "item.extraboats.large_yucca_boat": "Large Yucca Boat",
