--- a/src/main/resources/assets/extraboats/lang/es_mx.json
+++ b/src/main/resources/assets/extraboats/lang/es_mx.json
@@ -113,18 +113,21 @@
   "_comment": "Atmospheric",
   
   "item.extraboats.rosewood_chest_boat": "Bote de jacarandá con cofre",
+  "item.extraboats.morado_chest_boat": "Bote de palo de hierro con cofre",
   "item.extraboats.aspen_chest_boat": "Bote de álamo con cofre",
   "item.extraboats.kousa_chest_boat": "Bote de kousa con cofre",
   "item.extraboats.yucca_chest_boat": "Bote de yuca con cofre",
   "item.extraboats.grimwood_chest_boat": "Bote siniestro con cofre",
   
   "item.extraboats.rosewood_furnace_boat": "Bote de jacarandá con horno",
+  "item.extraboats.morado_furnace_boat": "Bote de palo de hierro con horno",
   "item.extraboats.aspen_furnace_boat": "Bote de álamo con horno",
   "item.extraboats.kousa_furnace_boat": "Bote de kousa con horno",
   "item.extraboats.yucca_furnace_boat": "Bote de yuca con horno",
   "item.extraboats.grimwood_furnace_boat": "Bote siniestro con horno",
   
   "item.extraboats.large_rosewood_boat": "Bote de jacarandá grande",
+  "item.extraboats.large_morado_boat": "Bote de palo de hierro grande",
   "item.extraboats.large_aspen_boat": "Bote de álamo grande",
   "item.extraboats.large_kousa_boat": "Bote de kousa grande",
   "item.extraboats.large_yucca_boat": "Bote de yuca grande",
