--- a/src/main/resources/assets/extraboats/lang/de_de.json
+++ b/src/main/resources/assets/extraboats/lang/de_de.json
@@ -114,18 +114,21 @@
   "_comment": "Atmospheric",
   
   "item.extraboats.rosewood_chest_boat": "Palisanderholzgüterboot",
+  "item.extraboats.morado_chest_boat": "Eisenholzgüterboot",
   "item.extraboats.aspen_chest_boat": "Espenholzgüterboot",
   "item.extraboats.kousa_chest_boat": "Hartriegelholzgüterboot",
   "item.extraboats.yucca_chest_boat": "Yuccaholzgüterboot",
   "item.extraboats.grimwood_chest_boat": "Grimmholzgüterboot",
   
   "item.extraboats.rosewood_furnace_boat": "Palisanderholzantriebsboot",
+  "item.extraboats.morado_furnace_boat": "Eisenholzantriebsboot",
   "item.extraboats.aspen_furnace_boat": "Espenholzantriebsboot",
   "item.extraboats.kousa_furnace_boat": "Hartriegelholzantriebsboot",
   "item.extraboats.yucca_furnace_boat": "Yuccaholzantriebsboot",
   "item.extraboats.grimwood_furnace_boat": "Grimmholzantriebsboot",
   
   "item.extraboats.large_rosewood_boat": "Großes Palisanderholzboot",
+  "item.extraboats.large_morado_boat": "Großes Eisenholzboot",
   "item.extraboats.large_aspen_boat": "Großes Espenholzboot",
   "item.extraboats.large_kousa_boat": "Großes Hartriegelholzboot",
   "item.extraboats.large_yucca_boat": "Großes Yuccaholzboot",
