--- a/src/main/resources/assets/extraboats/lang/zh_cn.json
+++ b/src/main/resources/assets/extraboats/lang/zh_cn.json
@@ -8,157 +8,157 @@
   
   "_comment": "原版丨https://minecraft-zh.gamepedia.com/%E5%8E%9F%E6%9C%A8",
   
-  "item.extraboats.oak_chest_boat": "Oak Boat with Chest",
-  "item.extraboats.spruce_chest_boat": "Spruce Boat with Chest",
-  "item.extraboats.birch_chest_boat": "Birch Boat with Chest",
-  "item.extraboats.jungle_chest_boat": "Jungle Boat with Chest",
-  "item.extraboats.acacia_chest_boat": "Acacia Boat with Chest",
-  "item.extraboats.dark_oak_chest_boat": "Dark Oak Boat with Chest",
+  "item.extraboats.oak_chest_boat": "橡木箱子船",
+  "item.extraboats.spruce_chest_boat": "云杉木箱子船",
+  "item.extraboats.birch_chest_boat": "白桦木箱子船",
+  "item.extraboats.jungle_chest_boat": "丛林木箱子船",
+  "item.extraboats.acacia_chest_boat": "金合欢木箱子船",
+  "item.extraboats.dark_oak_chest_boat": "深色橡木箱子船",
   
-  "item.extraboats.oak_furnace_boat": "Oak Boat with Furnace",
-  "item.extraboats.spruce_furnace_boat": "Spruce Boat with Furnace",
-  "item.extraboats.birch_furnace_boat": "Birch Boat with Furnace",
-  "item.extraboats.jungle_furnace_boat": "Jungle Boat with Furnace",
-  "item.extraboats.acacia_furnace_boat": "Acacia Boat with Furnace",
-  "item.extraboats.dark_oak_furnace_boat": "Dark Oak Boat with Furnace",
+  "item.extraboats.oak_furnace_boat": "橡木熔炉船",
+  "item.extraboats.spruce_furnace_boat": "云杉木熔炉船",
+  "item.extraboats.birch_furnace_boat": "白桦木熔炉船",
+  "item.extraboats.jungle_furnace_boat": "丛林木熔炉船",
+  "item.extraboats.acacia_furnace_boat": "金合欢木熔炉船",
+  "item.extraboats.dark_oak_furnace_boat": "深色橡木熔炉船",
   
-  "item.extraboats.large_oak_boat": "Large Oak Boat",
-  "item.extraboats.large_spruce_boat": "Large Spruce Boat",
-  "item.extraboats.large_birch_boat": "Large Birch Boat",
-  "item.extraboats.large_jungle_boat": "Large Jungle Boat",
-  "item.extraboats.large_acacia_boat": "Large Acacia Boat",
-  "item.extraboats.large_dark_oak_boat": "Large Dark Oak Boat",
+  "item.extraboats.large_oak_boat": "橡木大型船",
+  "item.extraboats.large_spruce_boat": "云杉木大型船",
+  "item.extraboats.large_birch_boat": "白桦木大型船",
+  "item.extraboats.large_jungle_boat": "丛林木大型船",
+  "item.extraboats.large_acacia_boat": "金合欢木大型船",
+  "item.extraboats.large_dark_oak_boat": "深色橡木大型船",
   
   
   "_comment": "超多生物群系丨https://github.com/Glitchfiend/BiomesOPlenty/blob/BOP-1.16.4-13.x.x/src/main/resources/assets/biomesoplenty/lang/zh_cn.json",
   
-  "item.extraboats.cherry_chest_boat": "Cherry Boat with Chest",
-  "item.extraboats.dead_chest_boat": "Dead Boat with Chest",
-  "item.extraboats.fir_chest_boat": "Fir Boat with Chest",
-  "item.extraboats.hellbark_chest_boat": "Hellbark Boat with Chest",
-  "item.extraboats.jacaranda_chest_boat": "Jacaranda Boat with Chest",
-  "item.extraboats.magic_chest_boat": "Magic Boat with Chest",
-  "item.extraboats.mahogany_chest_boat": "Mahogany Boat with Chest",
-  "item.extraboats.palm_chest_boat": "Palm Boat with Chest",
-  "item.extraboats.redwood_chest_boat": "Redwood Boat with Chest",
-  "item.extraboats.umbran_chest_boat": "Umbran Boat with Chest",
-  "item.extraboats.willow_chest_boat": "Willow Boat with Chest",
+  "item.extraboats.cherry_chest_boat": "樱木箱子船",
+  "item.extraboats.dead_chest_boat": "垂死木箱子船",
+  "item.extraboats.fir_chest_boat": "杉木箱子船",
+  "item.extraboats.hellbark_chest_boat": "地狱皮木箱子船",
+  "item.extraboats.jacaranda_chest_boat": "蓝花楹木箱子船",
+  "item.extraboats.magic_chest_boat": "魔法木箱子船",
+  "item.extraboats.mahogany_chest_boat": "桃花心木箱子船",
+  "item.extraboats.palm_chest_boat": "棕榈木箱子船",
+  "item.extraboats.redwood_chest_boat": "红木箱子船",
+  "item.extraboats.umbran_chest_boat": "暗影木箱子船",
+  "item.extraboats.willow_chest_boat": "柳木箱子船",
   
-  "item.extraboats.cherry_furnace_boat": "Cherry Boat with Furnace",
-  "item.extraboats.dead_furnace_boat": "Dead Boat with Furnace",
-  "item.extraboats.fir_furnace_boat": "Fir Boat with Furnace",
-  "item.extraboats.hellbark_furnace_boat": "Hellbark Boat with Furnace",
-  "item.extraboats.jacaranda_furnace_boat": "Jacaranda Boat with Furnace",
-  "item.extraboats.magic_furnace_boat": "Magic Boat with Furnace",
-  "item.extraboats.mahogany_furnace_boat": "Mahogany Boat with Furnace",
-  "item.extraboats.palm_furnace_boat": "Palm Boat with Furnace",
-  "item.extraboats.redwood_furnace_boat": "Redwood Boat with Furnace",
-  "item.extraboats.umbran_furnace_boat": "Umbran Boat with Furnace",
-  "item.extraboats.willow_furnace_boat": "Willow Boat with Furnace",
+  "item.extraboats.cherry_furnace_boat": "樱木熔炉船",
+  "item.extraboats.dead_furnace_boat": "垂死木熔炉船",
+  "item.extraboats.fir_furnace_boat": "杉木熔炉船",
+  "item.extraboats.hellbark_furnace_boat": "地狱皮木熔炉船",
+  "item.extraboats.jacaranda_furnace_boat": "蓝花楹木熔炉船",
+  "item.extraboats.magic_furnace_boat": "魔法木熔炉船",
+  "item.extraboats.mahogany_furnace_boat": "桃花心木熔炉船",
+  "item.extraboats.palm_furnace_boat": "棕榈木熔炉船",
+  "item.extraboats.redwood_furnace_boat": "红木熔炉船",
+  "item.extraboats.umbran_furnace_boat": "暗影木熔炉船",
+  "item.extraboats.willow_furnace_boat": "柳木熔炉船",
   
-  "item.extraboats.large_cherry_boat": "Large Cherry Boat",
-  "item.extraboats.large_dead_boat": "Large Dead Boat",
-  "item.extraboats.large_fir_boat": "Large Fir Boat",
-  "item.extraboats.large_hellbark_boat": "Large Hellbark Boat",
-  "item.extraboats.large_jacaranda_boat": "Large Jacaranda Boat",
-  "item.extraboats.large_magic_boat": "Large Magic Boat",
-  "item.extraboats.large_mahogany_boat": "Large Mahogany Boat",
-  "item.extraboats.large_palm_boat": "Large Palm Boat",
-  "item.extraboats.large_redwood_boat": "Large Redwood Boat",
-  "item.extraboats.large_umbran_boat": "Large Umbran Boat",
-  "item.extraboats.large_willow_boat": "Large Willow Boat",
+  "item.extraboats.large_cherry_boat": "樱木大型船",
+  "item.extraboats.large_dead_boat": "垂死木大型船",
+  "item.extraboats.large_fir_boat": "杉木大型船",
+  "item.extraboats.large_hellbark_boat": "地狱皮木大型船",
+  "item.extraboats.large_jacaranda_boat": "蓝花楹木大型船",
+  "item.extraboats.large_magic_boat": "魔法木大型船",
+  "item.extraboats.large_mahogany_boat": "桃花心木大型船",
+  "item.extraboats.large_palm_boat": "棕榈木大型船",
+  "item.extraboats.large_redwood_boat": "红木大型船",
+  "item.extraboats.large_umbran_boat": "暗影木大型船",
+  "item.extraboats.large_willow_boat": "柳木大型船",
   
   
   "_comment": "深蓝之境（译名有待商榷）丨https://github.com/team-abnormals/upgrade-aquatic/blob/master/src/main/resources/assets/upgrade_aquatic/lang/zh_cn.json",
   
-  "item.extraboats.driftwood_chest_boat": "Driftwood Boat with Chest",
-  "item.extraboats.river_chest_boat": "River Boat with Chest",
+  "item.extraboats.driftwood_chest_boat": "浮木箱子船",
+  "item.extraboats.river_chest_boat": "桑木箱子船",
   
-  "item.extraboats.driftwood_furnace_boat": "Driftwood Boat with Furnace",
-  "item.extraboats.river_furnace_boat": "River Boat with Furnace",
+  "item.extraboats.driftwood_furnace_boat": "浮木熔炉船",
+  "item.extraboats.river_furnace_boat": "桑木熔炉船",
   
-  "item.extraboats.large_driftwood_boat": "Large Driftwood Boat",
-  "item.extraboats.large_river_boat": "Large River Boat",
+  "item.extraboats.large_driftwood_boat": "浮木大型船",
+  "item.extraboats.large_river_boat": "桑木大型船",
   
   
   "_comment": "Bamboo Blocks丨It only has translation that was not made by native speakers and needs to be reviewed and updated丨https://github.com/team-abnormals/bamboo-blocks/blob/master/src/main/resources/assets/bamboo_blocks/lang/zh_cn.json",
   
-  "item.extraboats.bamboo_chest_boat": "Bamboo Boat with Chest",
-  "item.extraboats.bamboo_furnace_boat": "Bamboo Boat with Furnace",
-  "item.extraboats.large_bamboo_boat": "Large Bamboo Boat",
+  "item.extraboats.bamboo_chest_boat": "竹制箱子船",
+  "item.extraboats.bamboo_furnace_boat": "竹制熔炉船",
+  "item.extraboats.large_bamboo_boat": "竹制大型船",
   
   
   "_comment": "Endergetic Expansion丨It has no official CHS translation so I left them here丨https://github.com/team-abnormals/endergetic/tree/1.16.x/src/main/resources/assets/endergetic/lang",
   
-  "item.extraboats.poise_chest_boat": "Poise Boat with Chest",
-  "item.extraboats.poise_furnace_boat": "Poise Boat with Furnace",
-  "item.extraboats.large_poise_boat": "Large Poise Boat",
+  "item.extraboats.poise_chest_boat": "Poise箱子船",
+  "item.extraboats.poise_furnace_boat": "Poise熔炉船",
+  "item.extraboats.large_poise_boat": "Poise大型船",
   
   
   "_comment": "Environmental丨It only has translation that was not made by native speakers and needs to be reviewed and updated丨https://github.com/team-abnormals/environmental/blob/master/src/main/resources/assets/environmental/lang/zh_cn.json",
   
-  "item.extraboats.wisteria_chest_boat": "Wisteria Boat with Chest",
-  "item.extraboats.wisteria_furnace_boat": "Wisteria Boat with Furnace",
-  "item.extraboats.large_wisteria_boat": "Large Wisteria Boat",
+  "item.extraboats.wisteria_chest_boat": "紫藤木箱子船",
+  "item.extraboats.wisteria_furnace_boat": "紫藤木熔炉船",
+  "item.extraboats.large_wisteria_boat": "紫藤木大型船",
   
-  "item.extraboats.env_willow_chest_boat": "Willow Boat with Chest",
-  "item.extraboats.env_willow_furnace_boat": "Willow Boat with Furnace",
-  "item.extraboats.large_env_willow_boat": "Large Willow Boat",
+  "item.extraboats.env_willow_chest_boat": "柳木箱子船",
+  "item.extraboats.env_willow_furnace_boat": "柳木熔炉船",
+  "item.extraboats.large_env_willow_boat": "柳木大型船",
   
-  "item.extraboats.env_cherry_chest_boat": "Cherry Boat with Chest",
-  "item.extraboats.env_cherry_furnace_boat": "Cherry Boat with Furnace",
-  "item.extraboats.large_env_cherry_boat": "Large Cherry Boat",
+  "item.extraboats.env_cherry_chest_boat": "樱木箱子船",
+  "item.extraboats.env_cherry_furnace_boat": "樱木熔炉船",
+  "item.extraboats.large_env_cherry_boat": "樱木大型船",
   
   
   "_comment": "Atmospheric丨It has no official CHS translation so I left them here丨https://github.com/team-abnormals/atmospheric/tree/master/src/main/resources/assets/atmospheric/lang",
   
-  "item.extraboats.rosewood_chest_boat": "Rosewood Boat with Chest",
-  "item.extraboats.morado_chest_boat": "Morado Boat with Chest",
-  "item.extraboats.aspen_chest_boat": "Aspen Boat with Chest",
-  "item.extraboats.kousa_chest_boat": "Kousa Boat with Chest",
-  "item.extraboats.yucca_chest_boat": "Yucca Boat with Chest",
-  "item.extraboats.grimwood_chest_boat": "Grimwood Boat with Chest",
+  "item.extraboats.rosewood_chest_boat": "Rosewood箱子船",
+  "item.extraboats.morado_chest_boat": "Morado箱子船",
+  "item.extraboats.aspen_chest_boat": "Aspen箱子船",
+  "item.extraboats.kousa_chest_boat": "Kousa箱子船",
+  "item.extraboats.yucca_chest_boat": "Yucca箱子船",
+  "item.extraboats.grimwood_chest_boat": "Grimwood箱子船",
   
-  "item.extraboats.rosewood_furnace_boat": "Rosewood Boat with Furnace",
-  "item.extraboats.morado_furnace_boat": "Morado Boat with Furnace",
-  "item.extraboats.aspen_furnace_boat": "Aspen Boat with Furnace",
-  "item.extraboats.kousa_furnace_boat": "Kousa Boat with Furnace",
-  "item.extraboats.yucca_furnace_boat": "Yucca Boat with Furnace",
-  "item.extraboats.grimwood_furnace_boat": "Grimwood Boat with Furnace",
+  "item.extraboats.rosewood_furnace_boat": "Rosewood熔炉船",
+  "item.extraboats.morado_furnace_boat": "Morado熔炉船",
+  "item.extraboats.aspen_furnace_boat": "Aspen熔炉船",
+  "item.extraboats.kousa_furnace_boat": "Kousa熔炉船",
+  "item.extraboats.yucca_furnace_boat": "Yucca熔炉船",
+  "item.extraboats.grimwood_furnace_boat": "Grimwood熔炉船",
   
-  "item.extraboats.large_rosewood_boat": "Large Rosewood Boat",
-  "item.extraboats.large_morado_boat": "Large Morado Boat",
-  "item.extraboats.large_aspen_boat": "Large Aspen Boat",
-  "item.extraboats.large_kousa_boat": "Large Kousa Boat",
-  "item.extraboats.large_yucca_boat": "Large Yucca Boat",
-  "item.extraboats.large_grimwood_boat": "Large Grimwood Boat",
+  "item.extraboats.large_rosewood_boat": "Rosewood大型船",
+  "item.extraboats.large_morado_boat": "Morado大型船",
+  "item.extraboats.large_aspen_boat": "Aspen大型船",
+  "item.extraboats.large_kousa_boat": "Kousa大型船",
+  "item.extraboats.large_yucca_boat": "Yucca大型船",
+  "item.extraboats.large_grimwood_boat": "Grimwood大型船",
   
   
   "_comment": "秋原丨https://github.com/team-abnormals/autumnity/blob/1.16.x/src/main/resources/assets/autumnity/lang/zh_cn.json",
   
-  "item.extraboats.maple_chest_boat": "Maple Boat with Chest",
-  "item.extraboats.maple_furnace_boat": "Maple Boat with Furnace",
-  "item.extraboats.large_maple_boat": "Large Maple Boat",
+  "item.extraboats.maple_chest_boat": "枫木箱子船",
+  "item.extraboats.maple_furnace_boat": "枫木熔炉船",
+  "item.extraboats.large_maple_boat": "枫木大型船",
 
 
   "_comment": "Enhanced Mushrooms丨It has no official CHS translation so I left them here丨https://github.com/teamauroramods/EnhancedMushrooms/tree/master/src/main/resources/assets/enhanced_mushrooms/lang",
 
-  "item.extraboats.red_mushroom_chest_boat": "Red Mushroom Boat with Chest",
-  "item.extraboats.brown_mushroom_chest_boat": "Brown Mushroom Boat with Chest",
-  "item.extraboats.glowshroom_chest_boat": "Glowshroom Boat with Chest",
+  "item.extraboats.red_mushroom_chest_boat": "Red Mushroom箱子船",
+  "item.extraboats.brown_mushroom_chest_boat": "Brown Mushroom箱子船",
+  "item.extraboats.glowshroom_chest_boat": "Glowshroom箱子船",
 
-  "item.extraboats.red_mushroom_furnace_boat": "Red Mushroom Boat with Furnace",
-  "item.extraboats.brown_mushroom_furnace_boat": "Brown Mushroom Boat with Furnace",
-  "item.extraboats.glowshroom_furnace_boat": "Glowshroom Boat with Furnace",
+  "item.extraboats.red_mushroom_furnace_boat": "Red Mushroom熔炉船",
+  "item.extraboats.brown_mushroom_furnace_boat": "Brown Mushroom熔炉船",
+  "item.extraboats.glowshroom_furnace_boat": "Glowshroom熔炉船",
 
-  "item.extraboats.large_red_mushroom_boat": "Large Red Mushroom Boat",
-  "item.extraboats.large_brown_mushroom_boat": "Large Brown Mushroom Boat",
-  "item.extraboats.large_glowshroom_boat": "Large Glowshroom Boat",
+  "item.extraboats.large_red_mushroom_boat": "Red Mushroom大型船",
+  "item.extraboats.large_brown_mushroom_boat": "Brown Mushroom大型船",
+  "item.extraboats.large_glowshroom_boat": "Glowshroom大型船",
 
 
-  "_comment": "Hanami丨It has no official CHS translation so I left them here丨https://github.com/teamauroramods/Hanami/tree/master/src/main/resources/assets/hanami/lang",
+  "_comment": "Hanami丨It has no official CHS translation丨https://github.com/teamauroramods/Hanami/tree/master/src/main/resources/assets/hanami/lang",
 
-  "item.extraboats.sakura_chest_boat": "Sakura Boat with Chest",
-  "item.extraboats.sakura_furnace_boat": "Sakura Boat with Furnace",
-  "item.extraboats.large_sakura_boat": "Large Sakura Boat"
+  "item.extraboats.sakura_chest_boat": "樱花木箱子船",
+  "item.extraboats.sakura_furnace_boat": "樱花木熔炉船",
+  "item.extraboats.large_sakura_boat": "樱花木大型船"
 }
