--- a/src/main/resources/assets/extraboats/lang/zh_cn.json
+++ b/src/main/resources/assets/extraboats/lang/zh_cn.json
@@ -1,19 +1,19 @@
 {
   "itemGroup.extraboats": "更多船",
   
-  "entity.extraboats.chest_boat": "箱子船",
+  "entity.extraboats.chest_boat": "运输船",
   "entity.extraboats.furnace_boat": "动力船",
   "entity.extraboats.large_boat": "大型船",
   
   
   "_comment": "原版丨https://minecraft-zh.gamepedia.com/%E5%8E%9F%E6%9C%A8",
   
-  "item.extraboats.oak_chest_boat": "橡木箱子船",
-  "item.extraboats.spruce_chest_boat": "云杉木箱子船",
-  "item.extraboats.birch_chest_boat": "白桦木箱子船",
-  "item.extraboats.jungle_chest_boat": "丛林木箱子船",
-  "item.extraboats.acacia_chest_boat": "金合欢木箱子船",
-  "item.extraboats.dark_oak_chest_boat": "深色橡木箱子船",
+  "item.extraboats.oak_chest_boat": "橡木运输船",
+  "item.extraboats.spruce_chest_boat": "云杉木运输船",
+  "item.extraboats.birch_chest_boat": "白桦木运输船",
+  "item.extraboats.jungle_chest_boat": "丛林木运输船",
+  "item.extraboats.acacia_chest_boat": "金合欢木运输船",
+  "item.extraboats.dark_oak_chest_boat": "深色橡木运输船",
   
   "item.extraboats.oak_furnace_boat": "橡木动力船",
   "item.extraboats.spruce_furnace_boat": "云杉木动力船",
@@ -32,17 +32,17 @@
   
   "_comment": "超多生物群系丨https://github.com/Glitchfiend/BiomesOPlenty/blob/BOP-1.16.4-13.x.x/src/main/resources/assets/biomesoplenty/lang/zh_cn.json",
   
-  "item.extraboats.cherry_chest_boat": "樱木箱子船",
-  "item.extraboats.dead_chest_boat": "垂死木箱子船",
-  "item.extraboats.fir_chest_boat": "杉木箱子船",
-  "item.extraboats.hellbark_chest_boat": "地狱皮木箱子船",
-  "item.extraboats.jacaranda_chest_boat": "蓝花楹木箱子船",
-  "item.extraboats.magic_chest_boat": "魔法木箱子船",
-  "item.extraboats.mahogany_chest_boat": "桃花心木箱子船",
-  "item.extraboats.palm_chest_boat": "棕榈木箱子船",
-  "item.extraboats.redwood_chest_boat": "红木箱子船",
-  "item.extraboats.umbran_chest_boat": "暗影木箱子船",
-  "item.extraboats.willow_chest_boat": "柳木箱子船",
+  "item.extraboats.cherry_chest_boat": "樱木运输船",
+  "item.extraboats.dead_chest_boat": "垂死木运输船",
+  "item.extraboats.fir_chest_boat": "杉木运输船",
+  "item.extraboats.hellbark_chest_boat": "地狱皮木运输船",
+  "item.extraboats.jacaranda_chest_boat": "蓝花楹木运输船",
+  "item.extraboats.magic_chest_boat": "魔法木运输船",
+  "item.extraboats.mahogany_chest_boat": "桃花心木运输船",
+  "item.extraboats.palm_chest_boat": "棕榈木运输船",
+  "item.extraboats.redwood_chest_boat": "红木运输船",
+  "item.extraboats.umbran_chest_boat": "暗影木运输船",
+  "item.extraboats.willow_chest_boat": "柳木运输船",
   
   "item.extraboats.cherry_furnace_boat": "樱木动力船",
   "item.extraboats.dead_furnace_boat": "垂死木动力船",
@@ -71,8 +71,8 @@
   
   "_comment": "深蓝之境（译名有待商榷）丨https://github.com/team-abnormals/upgrade-aquatic/blob/master/src/main/resources/assets/upgrade_aquatic/lang/zh_cn.json",
   
-  "item.extraboats.driftwood_chest_boat": "浮木箱子船",
-  "item.extraboats.river_chest_boat": "桑木箱子船",
+  "item.extraboats.driftwood_chest_boat": "浮木运输船",
+  "item.extraboats.river_chest_boat": "桑木运输船",
   
   "item.extraboats.driftwood_furnace_boat": "浮木动力船",
   "item.extraboats.river_furnace_boat": "桑木动力船",
@@ -83,41 +83,41 @@
   
   "_comment": "Bamboo Blocks丨It only has translation that was not made by native speakers and needs to be reviewed and updated丨https://github.com/team-abnormals/bamboo-blocks/blob/master/src/main/resources/assets/bamboo_blocks/lang/zh_cn.json",
   
-  "item.extraboats.bamboo_chest_boat": "竹制箱子船",
+  "item.extraboats.bamboo_chest_boat": "竹制运输船",
   "item.extraboats.bamboo_furnace_boat": "竹制动力船",
   "item.extraboats.large_bamboo_boat": "竹制大型船",
   
   
   "_comment": "Endergetic Expansion丨It has no official CHS translation so I left them here丨https://github.com/team-abnormals/endergetic/tree/1.16.x/src/main/resources/assets/endergetic/lang",
   
-  "item.extraboats.poise_chest_boat": "Poise箱子船",
+  "item.extraboats.poise_chest_boat": "Poise运输船",
   "item.extraboats.poise_furnace_boat": "Poise动力船",
   "item.extraboats.large_poise_boat": "Poise大型船",
   
   
   "_comment": "Environmental丨It only has translation that was not made by native speakers and needs to be reviewed and updated丨https://github.com/team-abnormals/environmental/blob/master/src/main/resources/assets/environmental/lang/zh_cn.json",
   
-  "item.extraboats.wisteria_chest_boat": "紫藤木箱子船",
+  "item.extraboats.wisteria_chest_boat": "紫藤木运输船",
   "item.extraboats.wisteria_furnace_boat": "紫藤木动力船",
   "item.extraboats.large_wisteria_boat": "紫藤木大型船",
   
-  "item.extraboats.env_willow_chest_boat": "柳木箱子船",
+  "item.extraboats.env_willow_chest_boat": "柳木运输船",
   "item.extraboats.env_willow_furnace_boat": "柳木动力船",
   "item.extraboats.large_env_willow_boat": "柳木大型船",
   
-  "item.extraboats.env_cherry_chest_boat": "樱木箱子船",
+  "item.extraboats.env_cherry_chest_boat": "樱木运输船",
   "item.extraboats.env_cherry_furnace_boat": "樱木动力船",
   "item.extraboats.large_env_cherry_boat": "樱木大型船",
   
   
   "_comment": "Atmospheric丨It has no official CHS translation so I left them here丨https://github.com/team-abnormals/atmospheric/tree/master/src/main/resources/assets/atmospheric/lang",
   
-  "item.extraboats.rosewood_chest_boat": "Rosewood箱子船",
-  "item.extraboats.morado_chest_boat": "Morado箱子船",
-  "item.extraboats.aspen_chest_boat": "Aspen箱子船",
-  "item.extraboats.kousa_chest_boat": "Kousa箱子船",
-  "item.extraboats.yucca_chest_boat": "Yucca箱子船",
-  "item.extraboats.grimwood_chest_boat": "Grimwood箱子船",
+  "item.extraboats.rosewood_chest_boat": "Rosewood运输船",
+  "item.extraboats.morado_chest_boat": "Morado运输船",
+  "item.extraboats.aspen_chest_boat": "Aspen运输船",
+  "item.extraboats.kousa_chest_boat": "Kousa运输船",
+  "item.extraboats.yucca_chest_boat": "Yucca运输船",
+  "item.extraboats.grimwood_chest_boat": "Grimwood运输船",
   
   "item.extraboats.rosewood_furnace_boat": "Rosewood动力船",
   "item.extraboats.morado_furnace_boat": "Morado动力船",
@@ -136,16 +136,16 @@
   
   "_comment": "秋原丨https://github.com/team-abnormals/autumnity/blob/1.16.x/src/main/resources/assets/autumnity/lang/zh_cn.json",
   
-  "item.extraboats.maple_chest_boat": "枫木箱子船",
+  "item.extraboats.maple_chest_boat": "枫木运输船",
   "item.extraboats.maple_furnace_boat": "枫木动力船",
   "item.extraboats.large_maple_boat": "枫木大型船",
 
 
   "_comment": "Enhanced Mushrooms丨It has no official CHS translation so I left them here丨https://github.com/teamauroramods/EnhancedMushrooms/tree/master/src/main/resources/assets/enhanced_mushrooms/lang",
 
-  "item.extraboats.red_mushroom_chest_boat": "Red Mushroom箱子船",
-  "item.extraboats.brown_mushroom_chest_boat": "Brown Mushroom箱子船",
-  "item.extraboats.glowshroom_chest_boat": "Glowshroom箱子船",
+  "item.extraboats.red_mushroom_chest_boat": "Red Mushroom运输船",
+  "item.extraboats.brown_mushroom_chest_boat": "Brown Mushroom运输船",
+  "item.extraboats.glowshroom_chest_boat": "Glowshroom运输船",
 
   "item.extraboats.red_mushroom_furnace_boat": "Red Mushroom动力船",
   "item.extraboats.brown_mushroom_furnace_boat": "Brown Mushroom动力船",
@@ -158,7 +158,7 @@
 
   "_comment": "Hanami丨It has no official CHS translation丨https://github.com/teamauroramods/Hanami/tree/master/src/main/resources/assets/hanami/lang",
 
-  "item.extraboats.sakura_chest_boat": "樱花木箱子船",
+  "item.extraboats.sakura_chest_boat": "樱花木运输船",
   "item.extraboats.sakura_furnace_boat": "樱花木动力船",
   "item.extraboats.large_sakura_boat": "樱花木大型船"
 }
