redo mushroom translations

--- a/src/main/resources/assets/extraboats/lang/de_de.json
+++ b/src/main/resources/assets/extraboats/lang/de_de.json
@@ -144,16 +144,16 @@
 
   "_comment": "Enhanced Mushrooms",
 
-  "item.extraboats.red_mushroom_chest_boat": "Roter-Pilz-Güterboot",
-  "item.extraboats.brown_mushroom_chest_boat": "Brauner-Pilz-Güterboot",
+  "item.extraboats.red_mushroom_chest_boat": "Rotes Pilzgüterboot",
+  "item.extraboats.brown_mushroom_chest_boat": "Braunes Pilzgüterboot",
   "item.extraboats.glowshroom_chest_boat": "Glühpilzgüterboot",
 
-  "item.extraboats.red_mushroom_furnace_boat": "Roter-Pilz-Antriebsboot",
-  "item.extraboats.brown_mushroom_furnace_boat": "Brauner-Pilz-Antriebsboot",
+  "item.extraboats.red_mushroom_furnace_boat": "Rotes Pilzantriebsboot",
+  "item.extraboats.brown_mushroom_furnace_boat": "Braunes Pilzantriebsboot",
   "item.extraboats.glowshroom_furnace_boat": "Glühpilzantriebsboot",
 
-  "item.extraboats.large_red_mushroom_boat": "Großes Roter-Pilz-Boot",
-  "item.extraboats.large_brown_mushroom_boat": "Großes Brauner-Pilz-Boot",
+  "item.extraboats.large_red_mushroom_boat": "Großes rotes Pilzboot",
+  "item.extraboats.large_brown_mushroom_boat": "Großes braunes Pilzboot",
   "item.extraboats.large_glowshroom_boat": "Großes Glühpilzboot",
 
 
