--- a/src/main/resources/assets/extraboats/lang/es_mx.json
+++ b/src/main/resources/assets/extraboats/lang/es_mx.json
@@ -72,13 +72,13 @@
   "_comment": "Upgrade Aquatic",
   
   "item.extraboats.driftwood_chest_boat": "Bote de deriva con cofre",
-  "item.extraboats.river_chest_boat": "Bote fluvial con cofre",
+  "item.extraboats.river_chest_boat": "Bote ribereño con cofre",
   
   "item.extraboats.driftwood_furnace_boat": "Bote de deriva con horno",
-  "item.extraboats.river_furnace_boat": "Bote fluvial con horno",
+  "item.extraboats.river_furnace_boat": "Bote ribereño con horno",
   
   "item.extraboats.large_driftwood_boat": "Bote de deriva grande",
-  "item.extraboats.large_river_boat": "Bote fluvial grande",
+  "item.extraboats.large_river_boat": "Bote ribereño grande",
   
   
   "_comment": "Bamboo Blocks",
@@ -112,21 +112,21 @@
   
   "_comment": "Atmospheric",
   
-  "item.extraboats.rosewood_chest_boat": "Bote de jacarandá con cofre",
+  "item.extraboats.rosewood_chest_boat": "Bote de palisandro con cofre",
   "item.extraboats.morado_chest_boat": "Bote de palo de hierro con cofre",
   "item.extraboats.aspen_chest_boat": "Bote de álamo con cofre",
   "item.extraboats.kousa_chest_boat": "Bote de kousa con cofre",
   "item.extraboats.yucca_chest_boat": "Bote de yuca con cofre",
   "item.extraboats.grimwood_chest_boat": "Bote siniestro con cofre",
   
-  "item.extraboats.rosewood_furnace_boat": "Bote de jacarandá con horno",
+  "item.extraboats.rosewood_furnace_boat": "Bote de palisandro con horno",
   "item.extraboats.morado_furnace_boat": "Bote de palo de hierro con horno",
   "item.extraboats.aspen_furnace_boat": "Bote de álamo con horno",
   "item.extraboats.kousa_furnace_boat": "Bote de kousa con horno",
   "item.extraboats.yucca_furnace_boat": "Bote de yuca con horno",
   "item.extraboats.grimwood_furnace_boat": "Bote siniestro con horno",
   
-  "item.extraboats.large_rosewood_boat": "Bote de jacarandá grande",
+  "item.extraboats.large_rosewood_boat": "Bote de palisandro grande",
   "item.extraboats.large_morado_boat": "Bote de palo de hierro grande",
   "item.extraboats.large_aspen_boat": "Bote de álamo grande",
   "item.extraboats.large_kousa_boat": "Bote de kousa grande",
